<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:id="@+id/product_details_imageView"

        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="8dp"
        />

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/product_title"
        android:id="@+id/product_details_title"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/product_details_imageView"


        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/product_description"
        android:id="@+id/product_desc_label"
        android:layout_below="@+id/product_details_title"
        android:layout_toRightOf="@+id/product_details_imageView"
        style="?android:listSeparatorTextViewStyle"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/product_desc_text"
        android:id="@+id/product_desc_textView"
        android:layout_below="@+id/product_desc_label"
        android:layout_toRightOf="@+id/product_details_imageView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/reviewList"
        android:layout_below="@+id/productTextReviews"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/text_reviews"
        android:id="@+id/productTextReviews"
        android:layout_below="@+id/product_details_imageView"
        android:layout_marginLeft="10dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_add_review"
        android:id="@+id/buttonAddReview"
        android:layout_marginLeft="50dp"
        android:textSize="12dp"
        android:layout_above="@+id/reviewList"
        android:layout_toRightOf="@+id/productTextReviews"
        android:layout_toEndOf="@+id/productTextReviews"
        android:layout_alignRight="@+id/reviewList"
        android:layout_alignEnd="@+id/reviewList" />

</RelativeLayout>